# GrassRenderer

./: .gitignore  CMakeLists.txt  README.md  TODO.md  imgui.ini  main.cpp
report/: reportSlides.pptx  result.mkv
shader/: axisFrag.glsl  axisVert.glsl  compute.glsl  frag.glsl  geom.glsl  grassCompute.glsl  grassFrag.glsl  grassGeom.glsl  grassLightFrag.glsl  grassLightVert.glsl  grassVert.glsl  sunFrag.glsl  sunVert.glsl  vert.glsl
src/: application.cpp  application.hpp  axis.hpp  camera.hpp  computeShader.cpp  computeShader.hpp  errorHandler.hpp  frustum.hpp  grass.cpp  grass.hpp  light.hpp  material.hpp  mesh.hpp  shaders.cpp  shaders.hpp  sun.hpp  utils.cpp  utils.hpp
